--- a/front-end/to-do_app/tsconfig.app.json
+++ b/front-end/to-do_app/tsconfig.app.json
@@ -18,7 +18,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "types": ["vitest/globals", "@vitest/browser/matchers"]
   },
-  "include": ["src"]
+  "include": ["src", "setupTests.tsx"]
 }
